Move receipt aggregations to repository queries